# intake-OpenClimate

./: .gitignore  README.md  actors.yaml  emissions.yaml  environment.yml  master.yaml  requirements.txt  setup.cfg
catalogs/: actors.yaml  pledges.yaml
notebooks/: intake_openclimate_example.ipynb
scripts/: README.md  query_script.py
src/intake_openclimate/: __init__.py  open_catalog.py
src/intake_openclimate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
