[metadata]
name = intake_openclimate
description = wrapper around intake openClimate catalog
author = Luke Gloege
license = Apache
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    intake_openclimate
install_requires =
    intake>=0.6
    aiohttp>=3.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no